--- a/src/component/ViewingRoomScreen/ViewingRoomScreen.scss
+++ b/src/component/ViewingRoomScreen/ViewingRoomScreen.scss
@@ -10,6 +10,8 @@ $iconColor: azure !global;
   position: relative;
   background-image: url('/wallpaper.jpg');
   background-repeat: repeat;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .viewingRoom {
